--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "repository": "https://github.com/temerson/brewmaster",
   "main": "index.js",
   "dependencies": {
-    "bluebird": "^3.3.5",
     "events": "^1.1.0",
     "flux": "^2.1.1",
     "history": "^1.17.0",
     "material-ui": "^0.14.4",
-    "react": "^0.14.6",
+    "react": "^15.0.1",
     "react-bootstrap": "^0.28.3",
-    "react-dom": "^0.14.6",
+    "react-dom": "^15.0.1",
+    "react-redux": "^4.4.5",
     "react-router": "^1.0.3",
-    "react-tap-event-plugin": "^0.2.2"
+    "react-tap-event-plugin": "^0.2.2",
+    "redux": "^3.5.2"
   },
   "devDependencies": {
     "babel-loader": "^6.2.0",
@@ -28,6 +29,7 @@
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
     "enzyme": "^2.2.0",
+    "eslint": "^2.8.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "mocha": "^2.4.5",
     "node-sass": "^3.4.2",
